k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmservice-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vmautoservice.ru
      secretName: vmservice-tls
  rules:
    - host: vmautoservice.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmservice
                port:
                  number: 80
